# self_learning

autogen-demos/: .gitignore  Autogen_Agent_Demo.ipynb  Dockerfile  coder_demo.py  data.py  docker-compose.yml  magentic_one.py  main.py  pyproject.toml  requirements.txt  selector_group_chat_demo.py  sequential_chat_demo.py  sequential_parallel_agents_demo.py  swarm_demo.py
autogen-demos/coding/: tmp_code_3af35075b91e68f59a39c821853c8fc8.sh  tmp_code_3be107a1fbcb8f0b3e534c8e29680527.py  tmp_code_5f94debcfc64da2e3353eb2388661aac.py  tmp_code_7345c7e4773e062619fda69c04a5a8ba.py  tmp_code_807babcdf40f720b0611c0bfe9f20ca6.py  tmp_code_a79dd723ec74c0b345295f92d8354724.py
autogen-demos/coding/META_plots/: META_technical_analysis.csv
autogen-demos/multi_agent_design_patterns/: handoffs.py  mixture_of_agents.py  multi_agent_debate.py
autogen-demos/multi_agent_design_patterns/agent_class/: base.py
autogen-demos/multi_agent_design_patterns/data_class/: base.py
autogen-demos/setup/docker/: Dockerfile  pyproject.toml  requirements.txt
autogen-demos/src/: constants.py  logging.py  tools.py
autogen-demos/src/model/: base.py  helpers.py
